Fix main page getting too large

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -31,6 +31,10 @@ body {
   max-width: 65%;
 }
 
+#root {
+  max-width: 100%;
+}
+
 button,
 a,
 input,
